Fix alignment on login page

--- a/app/assets/stylesheets/pages/login_page.scss
+++ b/app/assets/stylesheets/pages/login_page.scss
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   margin-bottom: -41px;
-  margin-top: -72px;
+  margin-top: -81px;
   min-height: 100vh;
 }
 
